Bug 465721 - Splits can be dragged on top of other ones, breaking the layout of the tile editing screen
Summary: Splits can be dragged on top of other ones, breaking the layout of the tile e...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Custom Tiling (other bugs)
Version First Reported In: 5.26.90
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-14 17:11 UTC by chniucg
Modified: 2024-02-26 10:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chniucg 2023-02-14 17:11:48 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Use the standard layout
2. drag the border from the left tiling "space" over the border from the right tiling "space"

OBSERVED RESULT
It bugs out, generating some weird not usable tiling situation

EXPECTED RESULT
The border should stop at a certain position before it crosses the other border

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux (6.1.11-arch1-1)
KDE Plasma Version: 5.26.90
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
I've only tested it on wayland since I don't use X11
Comment 1 Nate Graham 2023-02-14 17:13:35 UTC
> It bugs out, generating some weird not usable tiling situation
Can you attach a screenshot that shows what happens? I'm not sure of what's going on and I can't reproduce the bug based on the description.

A screen recording would be even more helpful, in fact.
Comment 2 chniucg 2023-02-19 12:04:44 UTC
(In reply to Nate Graham from comment #1)
> > It bugs out, generating some weird not usable tiling situation
> Can you attach a screenshot that shows what happens? I'm not sure of what's
> going on and I can't reproduce the bug based on the description.
> 
> A screen recording would be even more helpful, in fact.

I'm sorry for the time this took, but I was busy.
But here is the requested resources: https://youtu.be/CAd43Fvd3F8

I hope you see what I mean by claiming it bugs out, overlapping and so on.
Comment 3 chniucg 2023-02-19 12:06:52 UTC
As an additional information:
I've got 4 screens, if that has anything to do with this
Comment 4 Nate Graham 2023-02-21 18:56:03 UTC
Aha, I see what you mean now! Can reproduce the issue.
Comment 5 chniucg 2023-12-02 09:52:52 UTC
Still happening in 5.27.9.
Comment 6 Ismael Asensio 2024-02-12 18:51:37 UTC Comment hidden (spam)
Comment 7 Ismael Asensio 2024-02-12 18:54:05 UTC Comment hidden (spam)
Comment 8 Bug Janitor Service 2024-02-22 16:57:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5280
Comment 9 Akseli Lahtinen 2024-02-26 10:16:59 UTC
Git commit 024db60ccdadcf8be5349c0c530b831b6b18371b by Akseli Lahtinen.
Committed on 26/02/2024 at 10:16.
Pushed by akselmo into branch 'master'.

tileseditor: Don't allow tiles to move tiles already at minimum size

Previously a tile could intersect with the tile next to it when resizing tiles in tiles-editor.

This checks that the tile next to the resized one is not at minimum size already, and stops
resizing if it is.

Do note that any current setups that may get broken if there is tiles that intersect each other,
so they may have to remake the tile setup.
FIXED-IN: 6.0.1

M  +16   -0    src/tiles/customtile.cpp

https://invent.kde.org/plasma/kwin/-/commit/024db60ccdadcf8be5349c0c530b831b6b18371b
Comment 10 Akseli Lahtinen 2024-02-26 10:34:51 UTC
Git commit bd71e4832725afa2adc156d15b2cd4589d7e36f2 by Akseli Lahtinen.
Committed on 26/02/2024 at 10:17.
Pushed by akselmo into branch 'Plasma/6.0'.

tileseditor: Don't allow tiles to move tiles already at minimum size

Previously a tile could intersect with the tile next to it when resizing tiles in tiles-editor.

This checks that the tile next to the resized one is not at minimum size already, and stops
resizing if it is.

Do note that any current setups that may get broken if there is tiles that intersect each other,
so they may have to remake the tile setup.
FIXED-IN: 6.0.1


(cherry picked from commit 024db60ccdadcf8be5349c0c530b831b6b18371b)

M  +16   -0    src/tiles/customtile.cpp

https://invent.kde.org/plasma/kwin/-/commit/bd71e4832725afa2adc156d15b2cd4589d7e36f2